--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile group: 'io.fastjson', name: 'boon', version: '0.34'
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.7.1'
+    compile 'com.github.ben-manes.caffeine:caffeine:2.4.0'
 
     compile 'com.intellij:annotations:+@jar'
 
